--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "tertis",
   "main": "server/server.app.js",
   "dependencies": {
-    "express": "latest"
+    "express": "latest",
+    "socket.io": "latest"
   }
 }
