--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
   "dependencies": {
     "express": "latest",
     "socket.io": "latest"
+  },
+  "scripts": {
+    "start": "node server/server.app.js",
+    "test": "istanbul cover _mocha"
   }
 }
